# css_parser

./: Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs  my_benchmark2.rs
css_files/: index.css  test.css
src/: app.rs  lib.rs  main.rs
src/handlers/: ui_handler.rs
ui/: app-window.slint
ui/components/: check-group.slint  dailog.slint  loading.slint  popmsg.slint  popup.slint  radio-group.slint  tip-msg.slint
ui/components/types/: types.slint
ui/psd/: css_parser_icon.psd  icon_check.ai
