[package]
name = "css_parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.10.0"
# slint = { version = "1.10.0", features = ["raw-window-handle-06"] }

lightningcss = { version = "1.0.0-alpha.63", features = ["visitor"] }
[build-dependencies]
slint-build = "1.10.0"
