[package]
name = "css_parser"
version = "0.8.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.0"
rfd = "0.15.3"
rayon = "1.10.0"
lightningcss = { version = "1.0.0-alpha.63", features = ["visitor"] }
[build-dependencies]
slint-build = "1.12.0"
winresource = "0.1.20"
image = "0.25.6"
ico = "0.4.0"
[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
[[bench]]
name = "my_benchmark2"
harness = false